[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm", "pybind11>=2.6.0", "numpy>=1.19.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhnsw"
dynamic = ["version"]
description = "Python bindings for HNSW (Hierarchical Navigable Small World) vector search"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-benchmark",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
root = "../.."
fallback_version = "0.0.0+unknown"